align always at 20px from right margin

--- a/src/components/Users/components/AddUser.css
+++ b/src/components/Users/components/AddUser.css
@@ -7,7 +7,7 @@
     position: absolute;
     top: 0;
     height: 100%;
-    right: 10%;
+    right: 20px;
     color: #607d8b;
     display: flex;
     flex-direction: column;
