--- a/src/components/Users/components/EditUser.css
+++ b/src/components/Users/components/EditUser.css
@@ -1,10 +1,15 @@
+hr {
+	border-top: 1px solid #e8ebed;
+}
+
 .EditUser {
     display: flex;
     flex-direction: column;
 }
 
 .EditUser-form .edit-user-top,
-.EditUser-form .edit-user-bottom {
+.EditUser-form .edit-user-bottom,
+.EditUser-form .edit-user-other-settings {
     display: flex;
     align-items: center;
     margin: 10px 0;
@@ -14,21 +19,36 @@
     position: relative;
 }
 
-.EditUser-form .edit-user-top input {
+.EditUser-form .edit-user-top input,
+.EditUser-form .edit-user-other-settings input {
     font-size: 13px;
     height: 34px;
     border: 1px solid #BDC4C9;
     border-radius: 3px;
     box-shadow: inset 0px 1px 0px #F1F0F1;
     margin: 0 5px;
-    padding: 6px 12px 6px 40px;
+    padding: 6px 12px 6px 30px;
 }
 
 .EditUser-form .edit-user-bottom .input-container {
     margin-right: 10px;
 }
 
-.EditUser-form .edit-user-bottom .input-container .label {
+.EditUser-form .edit-user-other-settings .input-container {
+    margin-right: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.EditUser-form .edit-user-bottom .input-container .label,
+.EditUser-form .edit-user-other-settings .input-container .label {
+	margin-left: 5px;
+    font-size: 13px;
+    font-weight: 700;
+    color: #58666e;
+}
+
+.EditUser-form .edit-user-other-settings .input-container .label {
     margin-left: 5px;
     font-size: 13px;
     font-weight: 700;
