--- a/src/components/Common/ColorPicker.css
+++ b/src/components/Common/ColorPicker.css
@@ -7,3 +7,11 @@
 	top: 40px;
 	z-index: 1000;
 }
+
+.colorpicker .sketch-picker {
+	width: 300px !important;
+}
+
+.colorpicker .sketch-picker input {
+	padding: 0px;
+}
