--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     color: white;
+	  background-color: var(--main-header-bg);
 }
 
 .Header-logo {
