--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -16,6 +16,7 @@
   width: 100%;
   padding: 15px 0;
   border-bottom: 1px solid #ddd;
+  background-color: var(--main-header-bg);
 }
 
 .Login-header img {
