--- a/src/components/RegisterViewer/RegisterViewer.css
+++ b/src/components/RegisterViewer/RegisterViewer.css
@@ -5,16 +5,33 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 60px auto 0;
+  margin: 40px auto 20px;
   padding-bottom: 10px;
   border: 1px solid #ddd;
   border-radius: 3px;
   background-color: white;
 }
 
+.Header {
+  justify-content: flex-start;
+}
+
+.Header h3 {
+  margin-left: 20px;
+  font-size: 1.4em;
+  font-weight: normal;
+}
+
+.RegisterViewer h4 {
+  color: var(--main-header-bg);
+  font-weight: normal;
+  font-size: 1.2em;
+  margin: 10px 0px 0px 0px;
+}
+
 .RegisterViewer-header {
   width: 100%;
-  padding: 15px 0;
+  padding: 10px 10px;
   border-bottom: 1px solid #ddd;
   background-color: var(--main-header-bg);
 }
@@ -27,8 +44,8 @@
 
 .RegisterViewer-header img {
   height: auto;
-  max-width: 300px;
-  min-width: 230px;
+  max-width: 100%;
+  min-width: 100%;
 }
 
 .RegisterViewer-messages {
