--- a/src/components/Broadcast/CelebrityHost/components/CelebrityHostBody.css
+++ b/src/components/Broadcast/CelebrityHost/components/CelebrityHostBody.css
@@ -13,10 +13,11 @@
 }
 
 .CelebrityHostBody .VideoWrap {
-  flex: 1;
+  position: relative;
+  width: 100%;
   align-items: center;
   border: 1px solid #000000;
-  min-height: 50vh;
+  min-height: 70vh;
 }
 
 .CelebrityHostBody .VideoWrap.hide {
