--- a/src/components/Broadcast/Fan/components/FanBody.css
+++ b/src/components/Broadcast/Fan/components/FanBody.css
@@ -9,10 +9,11 @@
 }
 
 .FanBody .VideoWrap {
-  flex: 1;
+  position: relative;
+  width: 100%;
   align-items: center;
   border: 1px solid #000000;
-  min-height: 50vh;
+  min-height: 70vh;
 }
 
 .FanBody .hide {
