--- a/src/components/ViewEvent/ViewEvent.css
+++ b/src/components/ViewEvent/ViewEvent.css
@@ -46,6 +46,16 @@
 	flex-direction: row;
 	align-content: center;
 	align-items: center;
+	width: 100%;
+    background-color: var(--main-header-bg);
+}
+
+.ViewEvent .img-center {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	align-items: center;
 }
 
 .ViewEvent img {
