show image only when not played and when finished playing

--- a/src/components/ViewEvent/ViewEvent.css
+++ b/src/components/ViewEvent/ViewEvent.css
@@ -20,9 +20,7 @@
 }
 
 .ViewEvent .ViewEvent-video-flex {
-	margin-top: 30px;
-	margin-left: 10%;
-	margin-right: 10%;
+	margin: 30px 10%;
 }
 
 .ViewEvent .ViewEvent-video-flex {
