--- a/src/components/Files/Files.css
+++ b/src/components/Files/Files.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  padding: 0px 50px;
+  padding: 10px 50px;
 }
 
 .Files-header {
@@ -12,4 +12,8 @@
 
 .Files-header h2 {
   font-weight: normal;
+}
+
+.Files-header h4 {
+  margin: 0px;
 }
