--- a/src/components/Broadcast/Producer/components/ProducerSidePanel.css
+++ b/src/components/Broadcast/Producer/components/ProducerSidePanel.css
@@ -25,3 +25,15 @@
   background: rgba(0, 0, 0, 0.1);
   opacity: .90;
 }
+
+.PanelActions {
+    display: flex;
+    justify-content: center;
+    background: #F5F5F5;
+    padding: 5px;
+}
+
+.PanelActions .btn {
+    margin-right: 3px;
+    font-size: 12px;
+}
