Adding chag with Firebase and Changing Prince George customizations

--- a/src/components/Broadcast/Fan/components/FanHeader.css
+++ b/src/components/Broadcast/Fan/components/FanHeader.css
@@ -73,6 +73,10 @@
   text-transform: uppercase;
 }
 
+.FanHeader-main .actions{
+  display: flex;
+}
+
 .FanHeader-main .btn {
   height: 36px;
   width: 110px;
