--- a/src/components/Broadcast/Producer/Producer.css
+++ b/src/components/Broadcast/Producer/Producer.css
@@ -1,7 +1,7 @@
 .Producer {
     display: flex;
     position: relative;
-    width: 100vw;
+    max-width: 100vw;
 	overflow: hidden;
 }
 .Producer-main {
